--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
           credentials_json: '${{ secrets.GCP_SERVICE_KEY }}'
 
       - name: Configure Docker for Artifact Registry
-        run: gcloud auth configure-docker
+        run: gcloud auth configure-docker asia-south1-docker.pkg.dev
 
       - name: Build Docker image
         run: |
