--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,6 @@ jobs:
         uses: google-github-actions/deploy-cloudrun@v1
         with:
           service: product-api
-          image: asia-south1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/product-api:$GITHUB_SHA
+          image: asia-south1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/product-api-githubaction/product-api:$GITHUB_SHA
           region: ${{ secrets.GCP_REGION }}
           allow-unauthenticated: true
